--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <!-- TITLE -->
     <title>Vue To Do List</title>
 
+    <!-- FONT AWESOME -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <!-- BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -56,11 +65,20 @@
 
         <ul class="list-group">
           <li
-            class="list-group-item"
-            v-for="task in tasks"
-            v-bind:class="(task.done == true) ? 'text-decoration-line-through' : '' "
+            class="list-group-item d-flex justify-content-between align-items-center"
+            v-for="(task, index) in tasks"
           >
-            {{task.text}}
+            <div
+              v-bind:class="(task.done == true) ? 'text-decoration-line-through' : '' "
+            >
+              {{task.text}}
+            </div>
+            <span
+              class="badge bg-danger rounded-pill"
+              @click="removeTask(index)"
+            >
+              <i class="fa-solid fa-xmark"></i>
+            </span>
           </li>
           <!-- <li class="list-group-item">Task</li> -->
         </ul>
