--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             v-for="(task, index) in tasks"
           >
             <div
+              @click="taskToDo(index)"
               v-bind:class="(task.done == true) ? 'text-decoration-line-through' : '' "
             >
               {{task.text}}
